bitwarden: fix network definitions

--- a/docker/stacks/bitwarden/compose.override.yaml
+++ b/docker/stacks/bitwarden/compose.override.yaml
@@ -16,8 +16,8 @@ services:
       wud.watch.digest: false
       wud.display.icon: sh:microsoft-sql-server
       wud.tag.include: ^\d+\.\d+\.\d+$$
-    networks: !override
-      - default
+    # networks: !override
+    #   - default
 
   web:
     image: ghcr.io/bitwarden/web:2025.7.2
@@ -25,8 +25,8 @@ services:
       - .env
     volumes:
       - /srv/application_data/bitwarden/web:/etc/bitwarden/web
-    networks: !override
-      - default
+    # networks: !override
+    #   - default
     labels:
       # What's Up Docker
       wud.watch: true
@@ -40,8 +40,8 @@ services:
       - .env
     volumes:
       - /srv/application_data/bitwarden/core/attachments:/etc/bitwarden/core/attachments
-    networks: !override
-      - default
+    # networks: !override
+    #   - default
     labels:
       # What's Up Docker
       wud.watch: true
@@ -57,8 +57,8 @@ services:
       - /srv/application_data/bitwarden/core:/etc/bitwarden/core
       - /srv/application_data/bitwarden/ca-certificates:/etc/bitwarden/ca-certificates
       - /srv/application_data/bitwarden/logs/api:/etc/bitwarden/logs
-    networks: !override
-      - default
+    # networks: !override
+    #   - default
     labels:
       # What's Up Docker
       wud.watch: true
@@ -75,8 +75,8 @@ services:
       - /srv/application_data/bitwarden/core:/etc/bitwarden/core
       - /srv/application_data/bitwarden/ca-certificates:/etc/bitwarden/ca-certificates
       - /srv/application_data/bitwarden/logs/identity:/etc/bitwarden/logs
-    networks: !override
-      - default
+    # networks: !override
+    #   - default
     labels:
       # What's Up Docker
       wud.watch: true
@@ -93,8 +93,8 @@ services:
       - /srv/application_data/bitwarden/core:/etc/bitwarden/core
       - /srv/application_data/bitwarden/ca-certificates:/etc/bitwarden/ca-certificates
       - /srv/application_data/bitwarden/logs/sso:/etc/bitwarden/logs
-    networks: !override
-      - default
+    # networks: !override
+    #   - default
     labels:
       # What's Up Docker
       wud.watch: true
@@ -110,8 +110,8 @@ services:
       - /srv/application_data/bitwarden/core:/etc/bitwarden/core
       - /srv/application_data/bitwarden/ca-certificates:/etc/bitwarden/ca-certificates
       - /srv/application_data/bitwarden/logs/admin:/etc/bitwarden/logs
-    networks: !override
-      - default
+    # networks: !override
+    #   - default
     labels:
       # What's Up Docker
       wud.watch: true
@@ -158,8 +158,8 @@ services:
     volumes:
       - /srv/application_data/bitwarden/ca-certificates:/etc/bitwarden/ca-certificates
       - /srv/application_data/bitwarden/logs/events:/etc/bitwarden/logs
-    networks: !override
-      - default
+    # networks: !override
+    #   - default
     labels:
       # What's Up Docker
       wud.watch: true
@@ -177,8 +177,8 @@ services:
       - /srv/application_data/bitwarden/nginx/ssl:/etc/ssl
     env_file: !override
       - .env
-    networks: !override
-      - default
+    networks: #!override
+    #  - default
       - proxy_private
     labels:
       # Traefik
