--- a/bootstrap/hyperion/authentik/redis.yaml
+++ b/bootstrap/hyperion/authentik/redis.yaml
@@ -16,6 +16,10 @@ services:
       - authentik
     labels:
       komodo.skip: true # Prevent Komodo from stopping with StopAllContainers
+      # Glance
+      glance.parent: authentik
+      glance.name: Redis
+      glance.category: core
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
