--- a/bootstrap/hyperion/authentik/worker.yaml
+++ b/bootstrap/hyperion/authentik/worker.yaml
@@ -34,6 +34,10 @@ services:
         condition: service_healthy
     labels:
       komodo.skip: true # Prevent Komodo from stopping with StopAllContainers
+      # Glance
+      glance.parent: authentik
+      glance.name: Worker
+      glance.category: core
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
