--- a/bootstrap/hyperion/komodo/core.yaml
+++ b/bootstrap/hyperion/komodo/core.yaml
@@ -32,6 +32,13 @@ services:
     #   - host.docker.internal:host-gateway
     labels:
       komodo.skip: # Prevent Komodo from stopping with StopAllContainers
+      # Glance
+      glance.name: Komodo
+      glance.icon: sh:komodo
+      glance.url: https://komodo.jekotia.net
+      glance.description: Container management
+      glance.id: komodo
+      glance.category: core
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
