--- a/bootstrap/hyperion/komodo/mongo.yaml
+++ b/bootstrap/hyperion/komodo/mongo.yaml
@@ -19,6 +19,10 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: ${KOMODO_DB_PASSWORD}
     labels:
       komodo.skip: true # Prevent Komodo from stopping with StopAllContainers
+      # Glance
+      glance.parent: komodo
+      glance.name: MongoDB
+      glance.category: core
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
