--- a/bootstrap/hyperion/traefik/traefik.yaml
+++ b/bootstrap/hyperion/traefik/traefik.yaml
@@ -105,6 +105,13 @@ services:
       PGID: ${TRAEFIK_GID:-1000}
     labels:
       komodo.skip: true # Prevent Komodo from stopping with StopAllContainers
+      # Glance
+      glance.name: Traefik, Hyperion
+      glance.icon: sh:traefik
+      glance.url: https://traefik.hyperion.jekotia.net
+      glance.description: Reverse Proxy
+      glance.id: traefik-hyperion
+      glance.category: core
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
