--- a/docker/stacks/github-pages/compose.yaml
+++ b/docker/stacks/github-pages/compose.yaml
@@ -11,12 +11,18 @@ services:
     volumes:
       - /srv/repositories/jekotia.github.io:/src/site
     labels:
-      # diun.enable: "true"
+      # Glance
+      glance.name: Github Pages
+      glance.icon: sh:github
+      glance.url: https://github-pages.jekotia.net
+      glance.description: Local test environment for jekotia.net
+      glance.category: dev
+      # Traefik
       traefik.enable: "true"
-      # Frontend => Router
+      # Traefik, Router
       traefik.http.routers.github-pages.entrypoints: websecure
       traefik.http.routers.github-pages.rule: Host(`${GITHUB_PAGES_URL_PREFIX:-github-pages.}${NETWORK_DOMAIN}`)
       traefik.http.routers.github-pages.tls.certresolver: dns-cloudflare
-      # Frontend => Services
+      # Traefik, Services
       traefik.http.routers.github-pages.service: github-pages
       traefik.http.services.github-pages.loadbalancer.server.port: 4000
