--- a/docker/stacks/vscodium/compose.yaml
+++ b/docker/stacks/vscodium/compose.yaml
@@ -29,13 +29,19 @@ services:
     networks:
       - proxy_private
     labels:
-      diun.enable: "true"
+      # Glance
+      glance.name: VSCodium
+      glance.icon: sh:vscodium
+      glance.url: https://vscodium.jekotia.net
+      glance.description: VSCodium via VNC
+      glance.category: dev
+      # Traefik
       traefik.enable: "true"
-      # Frontend => Router
+      # Traefik, Router
       traefik.http.routers.vscodium.entrypoints: websecure
       traefik.http.routers.vscodium.rule: Host(`${VSCODIUM_URL_PREFIX:-vscodium.}${NETWORK_DOMAIN}`)
       traefik.http.routers.vscodium.tls.certresolver: dns-cloudflare
       traefik.http.routers.vscodium.middlewares: forwardAuth-authentik@file
-      # Frontend => Services
+      # Traefik, Services
       traefik.http.routers.vscodium.service: vscodium
       traefik.http.services.vscodium.loadbalancer.server.port: 3000
