--- a/docker/stacks/github-pages/compose.yaml
+++ b/docker/stacks/github-pages/compose.yaml
@@ -14,7 +14,7 @@ services:
       # Glance
       glance.name: Github Pages
       glance.icon: sh:github
-      glance.url: https://github-pages.jekotia.net
+      glance.url: https://${GITHUB_PAGES_URL_PREFIX:-github-pages.}${NETWORK_DOMAIN}
       glance.description: Local test environment for jekotia.net
       glance.category: dev
       # Traefik
