--- a/docker/stacks/code-server/compose.yaml
+++ b/docker/stacks/code-server/compose.yaml
@@ -30,7 +30,7 @@ services:
     labels:
       # Glance
       glance.name: code-server
-      glance.icon: sh:vscode
+      glance.icon: sh:visual-studio-code
       glance.url: https://${CODESERVER_URL_PREFIX:-code-server.}${NETWORK_DOMAIN}
       glance.description: Browser-based IDE
       glance.category: dev
