--- a/docker/stacks/bitwarden/compose.override.yaml
+++ b/docker/stacks/bitwarden/compose.override.yaml
@@ -11,6 +11,10 @@ services:
       - /srv/application_data/bitwarden/logs/mssql:/var/opt/mssql/log
       - /srv/application_data/bitwarden/mssql/backups:/etc/bitwarden/mssql/backups
     labels:
+      # Glance
+      glance.name: MSSQL
+      glance.parent: bitwarden
+      glance.category: personal
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
@@ -24,6 +28,13 @@ services:
     volumes:
       - /srv/application_data/bitwarden/web:/etc/bitwarden/web
     labels:
+      # Glance
+      glance.name: Bitwarden
+      glance.icon: sh:bitwarden
+      glance.url: https://${BITWARDEN_URL_PREFIX:-vault.}${NETWORK_DOMAIN}
+      glance.description: Password manager
+      glance.category: personal
+      glance.id: bitwarden
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
@@ -37,6 +48,10 @@ services:
     volumes:
       - /srv/application_data/bitwarden/core/attachments:/etc/bitwarden/core/attachments
     labels:
+      # Glance
+      glance.name: Attachments
+      glance.parent: bitwarden
+      glance.category: personal
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
@@ -52,6 +67,10 @@ services:
       - /srv/application_data/bitwarden/ca-certificates:/etc/bitwarden/ca-certificates
       - /srv/application_data/bitwarden/logs/api:/etc/bitwarden/logs
     labels:
+      # Glance
+      glance.name: API
+      glance.parent: bitwarden
+      glance.category: personal
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
@@ -68,6 +87,10 @@ services:
       - /srv/application_data/bitwarden/ca-certificates:/etc/bitwarden/ca-certificates
       - /srv/application_data/bitwarden/logs/identity:/etc/bitwarden/logs
     labels:
+      # Glance
+      glance.name: Identity
+      glance.parent: bitwarden
+      glance.category: personal
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
@@ -84,6 +107,10 @@ services:
       - /srv/application_data/bitwarden/ca-certificates:/etc/bitwarden/ca-certificates
       - /srv/application_data/bitwarden/logs/sso:/etc/bitwarden/logs
     labels:
+      # Glance
+      glance.name: SSO
+      glance.parent: bitwarden
+      glance.category: personal
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
@@ -99,6 +126,10 @@ services:
       - /srv/application_data/bitwarden/ca-certificates:/etc/bitwarden/ca-certificates
       - /srv/application_data/bitwarden/logs/admin:/etc/bitwarden/logs
     labels:
+      # Glance
+      glance.name: Admin
+      glance.parent: bitwarden
+      glance.category: personal
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
@@ -113,6 +144,10 @@ services:
       - /srv/application_data/bitwarden/ca-certificates:/etc/bitwarden/ca-certificates
       - /srv/application_data/bitwarden/logs/icons:/etc/bitwarden/logs
     labels:
+      # Glance
+      glance.name: Icons
+      glance.parent: bitwarden
+      glance.category: personal
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
@@ -127,6 +162,10 @@ services:
       - /srv/application_data/bitwarden/ca-certificates:/etc/bitwarden/ca-certificates
       - /srv/application_data/bitwarden/logs/notifications:/etc/bitwarden/logs
     labels:
+      # Glance
+      glance.name: Notifications
+      glance.parent: bitwarden
+      glance.category: personal
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
@@ -141,6 +180,10 @@ services:
       - /srv/application_data/bitwarden/ca-certificates:/etc/bitwarden/ca-certificates
       - /srv/application_data/bitwarden/logs/events:/etc/bitwarden/logs
     labels:
+      # Glance
+      glance.name: Events
+      glance.parent: bitwarden
+      glance.category: personal
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
@@ -161,6 +204,10 @@ services:
     #  - default
       - proxy_private
     labels:
+      # Glance
+      glance.name: Nginx
+      glance.parent: bitwarden
+      glance.category: personal
       # Traefik
       traefik.enable: "true"
       # Traefik, Router
