--- a/docker/stacks/grocy/compose.yaml
+++ b/docker/stacks/grocy/compose.yaml
@@ -15,6 +15,12 @@ services:
       PGID: ${GID:-1000}
       TZ: ${TIMEZONE}
     labels:
+      # Glance
+      glance.name: Grocy
+      glance.icon: sh:grocy
+      glance.url: https://${GROCY_URL_PREFIX:-grocy.}${NETWORK_DOMAIN}
+      glance.description: Home inventory
+      glance.category: personal
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
