--- a/docker/stacks/paperless/broker.yaml
+++ b/docker/stacks/paperless/broker.yaml
@@ -8,6 +8,10 @@ services:
     volumes:
       - /srv/application_data/paperless/broker/data:/data
     labels:
+      # Glance
+      glance.name: Broker
+      glance.parent: paperless
+      glance.category: personal
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
