--- a/docker/stacks/paperless/gotenberg.yaml
+++ b/docker/stacks/paperless/gotenberg.yaml
@@ -12,6 +12,10 @@ services:
       - --chromium-disable-javascript=true
       - --chromium-allow-list=file:///tmp/.*
     labels:
+      # Glance
+      glance.name: Gotenberg
+      glance.parent: paperless
+      glance.category: personal
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
