--- a/docker/stacks/paperless/tika.yaml
+++ b/docker/stacks/paperless/tika.yaml
@@ -6,6 +6,10 @@ services:
     networks:
       - paperless
     labels:
+      # Glance
+      glance.name: Tika
+      glance.parent: paperless
+      glance.category: personal
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
