--- a/docker/stacks/plexms/compose.yaml
+++ b/docker/stacks/plexms/compose.yaml
@@ -3,7 +3,7 @@ include:
   
 services:
   plexms:
-    image: ghcr.io/linuxserver/plex:${VERSION}
+    image: ghcr.io/linuxserver/plex:version-1.42.1.10060-4e8b05daf
     container_name: plexms
     restart: unless-stopped
     networks:
@@ -77,7 +77,7 @@ services:
       PGID: ${GID:-1001}
       TZ: ${TIMEZONE}
       ADVERTISE_IP: http://${PLEX_IP:-10.0.0.21}:32400/
-      VERSION: ${VERSION}
+      VERSION: docker
     #?- UMASK_SET=022
     labels:
       # What's Up Docker
