--- a/docker/stacks/emulator-source-backups/compose.yaml
+++ b/docker/stacks/emulator-source-backups/compose.yaml
@@ -23,6 +23,12 @@ services:
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
     labels:
+      # Glance
+      glance.name: Emulator Source Backups
+      glance.icon: sh:gitea
+      glance.url: https://${ESB_URL_PREFIX:-esb.}${NETWORK_DOMAIN}
+      glance.description: Backups of emulator source code
+      glance.category: backups
       # What's Up Docker
       wud.watch: true
       wud.link.template: https://github.com/go-gitea/gitea/releases/tag/v$${major}.$${minor}.$${patch}
