--- a/docker/stacks/foundry/compose.yaml
+++ b/docker/stacks/foundry/compose.yaml
@@ -26,6 +26,12 @@ services:
     networks:
       - proxy_private
     labels:
+      # Glance
+      glance.name: Foundry VTT
+      glance.icon: sh:foundry-virtual-tabletop
+      glance.url: https://${FOUNDRY_URL_PREFIX:-foundry.}${NETWORK_DOMAIN}
+      glance.description: Virtual gaming tabletop
+      glance.category: gaming
       # What's Up Docker
       wud.watch: true
       wud.link.template: https://github.com/felddy/foundryvtt-docker/releases/tag/v$${major}.$${minor}.$${patch}
