--- a/docker/stacks/ttrss/backups.yaml
+++ b/docker/stacks/ttrss/backups.yaml
@@ -14,6 +14,10 @@ services:
       - db
     command: /opt/tt-rss/dcron.sh -f
     labels:
+      # Glance
+      glance.name: Backups
+      glance.parent: ttrss
+      glance.category: general
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
