--- a/docker/stacks/ttrss/db.yaml
+++ b/docker/stacks/ttrss/db.yaml
@@ -14,6 +14,10 @@ services:
     volumes:
       - /srv/application_data/ttrss/db/data:/var/lib/postgresql/data
     labels:
+      # Glance
+      glance.name: PostgreSQL
+      glance.parent: ttrss
+      glance.category: general
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
