--- a/docker/stacks/ttrss/updater.yaml
+++ b/docker/stacks/ttrss/updater.yaml
@@ -14,6 +14,10 @@ services:
       - app
     command: /opt/tt-rss/updater.sh
     labels:
+      # Glance
+      glance.name: Updater
+      glance.parent: ttrss
+      glance.category: general
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
