--- a/docker/stacks/bazarr/compose.yaml
+++ b/docker/stacks/bazarr/compose.yaml
@@ -17,6 +17,12 @@ services:
       PGID: ${GID:-1000}
       TZ: ${TIMEZONE}
     labels:
+      # Glance
+      glance.name: Bazarr
+      glance.icon: sh:bazarr
+      glance.url: https://${BAZARR_URL_PREFIX:-bazarr.}${NETWORK_DOMAIN}
+      glance.description: Subtitle management
+      glance.category: media-management
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
