--- a/docker/stacks/lidarr/compose.yaml
+++ b/docker/stacks/lidarr/compose.yaml
@@ -20,6 +20,12 @@ services:
       TZ: ${TIMEZONE}
       # UMASK_SET: 022 #optional
     labels:
+      # Glance
+      glance.name: Lidarr
+      glance.icon: sh:lidarr
+      glance.url: https://${LIDARR_URL_PREFIX:-lidarr.}${NETWORK_DOMAIN}
+      glance.description: Music library management
+      glance.category: media-management
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
