--- a/docker/stacks/mylar/compose.yaml
+++ b/docker/stacks/mylar/compose.yaml
@@ -17,6 +17,12 @@ services:
       PGID: ${GID:-1000}
       TZ: ${TIMEZONE}
     labels:
+      # Glance
+      glance.name: Mylar
+      glance.icon: sh:mylar3
+      glance.url: https://${MYLAR_URL_PREFIX:-mylar.}${NETWORK_DOMAIN}
+      glance.description: Comicbook library management
+      glance.category: media-management
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
