--- a/docker/stacks/prowlarr/compose.yaml
+++ b/docker/stacks/prowlarr/compose.yaml
@@ -15,6 +15,12 @@ services:
       PGID: ${GID:-1000}
       TZ: ${TIMEZONE}
     labels:
+      # Glance
+      glance.name: Prowlarr
+      glance.icon: sh:prowlarr
+      glance.url: https://${PROWLARR_URL_PREFIX:-prowlarr.}${NETWORK_DOMAIN}
+      glance.description: Torrent tracker management for the *arr's
+      glance.category: media-management
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
