--- a/docker/stacks/readarr/compose.yaml
+++ b/docker/stacks/readarr/compose.yaml
@@ -18,6 +18,12 @@ services:
       PGID: ${GID:-1000}
       TZ: ${TIMEZONE}
     labels:
+      # Glance
+      glance.name: Readarr
+      glance.icon: sh:Readarr
+      glance.url: https://${READARR_URL_PREFIX:-readarr.}${NETWORK_DOMAIN}
+      glance.description: eBook library management
+      glance.category: media-management
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
