--- a/docker/stacks/navidrome/compose.yaml
+++ b/docker/stacks/navidrome/compose.yaml
@@ -19,6 +19,12 @@ services:
     - "/mnt/storage/application_data/navidrome/app/data:/data"
     - "/mnt/storage/multimedia/music:/music:ro"
     labels:
+      # Glance
+      glance.name: Navidrome
+      glance.icon: sh:navidrome
+      glance.url: https://${NAVIDROME_URL_PREFIX:-navidrome.}${NETWORK_DOMAIN}
+      glance.description: Music streaming server
+      glance.category: media-server
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
